# Godot_GDECPP_CMake_Example

./: .gitignore  CMakeLists.txt  README.md
demo/: .gitignore  icon.svg.import  main.tscn  project.godot
include/: gdexample.h
src/: gdexample.cpp  plugin.cpp
